Injects the editor in the executor context
Injects the editor in ExecutorContext instead of create it for each lsp
command